kafka: deprecate redpanda_migrator_bundle

--- a/internal/impl/kafka/input_redpanda_migrator_bundle.tmpl.yaml
+++ b/internal/impl/kafka/input_redpanda_migrator_bundle.tmpl.yaml
@@ -14,7 +14,7 @@
 
 name: redpanda_migrator_bundle
 type: input
-status: experimental
+status: deprecated
 categories: [ Services ]
 summary: Redpanda Migrator bundle input
 description: |
