--- a/internal/impl/kafka/output_redpanda_migrator_bundle.tmpl.yaml
+++ b/internal/impl/kafka/output_redpanda_migrator_bundle.tmpl.yaml
@@ -14,7 +14,7 @@
 
 name: redpanda_migrator_bundle
 type: output
-status: experimental
+status: deprecated
 categories: [ Services ]
 summary: Redpanda Migrator bundle output
 description: |
