--- a/.github/workflows/upload_plugin.yml
+++ b/.github/workflows/upload_plugin.yml
@@ -48,6 +48,7 @@ jobs:
           go-version: stable
 
       - name: Install Microsoft Go
+        if: ${{ matrix.variant == 'connect-fips' }}
         run: |
           GO_VERSION=$(go version | cut -d' ' -f3 | cut -d'.' -f1,2)
           curl -sSLf -o "$RUNNER_TEMP/msgo.tgz" https://aka.ms/golang/release/latest/${GO_VERSION}.linux-amd64.tar.gz
