ffi: introduce ffi processor (#3723)
* ffi: introduce ffi processor

* ffi: implement generic fallback

That's some wild and dynamic stuff. Borderline python level of dynamic
function calls here.

* chore: format

* task: run ffi tests in CI

* update changelog

* docs: add ffi example

* address review feedback

* ffi: make internal impl

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -52,7 +52,7 @@ tasks:
       - '{{.TOOLS_BIN_DIR}}/govulncheck ./...'
 
   test:
-    desc: Run unit and template tests
+    desc: Run unit, template and ffi tests
     deps:
       - test:unit
       - test:template
