chore(releaser): add darwin arm64 build

--- a/.goreleaser/connect-cloud.yaml
+++ b/.goreleaser/connect-cloud.yaml
@@ -7,7 +7,7 @@ builds:
   - id: connect-cloud
     main: cmd/redpanda-connect-cloud/main.go
     binary: redpanda-connect
-    goos: [ linux ]
+    goos: [ linux, darwin ]
     goarch: [ amd64, arm64 ]
     env:
       - CGO_ENABLED=0
