fix: Address failing migrator integration tests
- Programmatically fetch latest tag to avoid caching 'latest' version
- Update failing tests to new version of Redpanda

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -72,6 +72,9 @@ jobs:
       - name: Install Task
         uses: ./.github/actions/setup-task
 
+      - name: Pull Latest Redpanda Image 
+        run: task docker:pull-redpanda
+
       - name: Run Integration Tests for ${{ matrix.package }}
         run: task test:integration-package PKG=${{ matrix.package }}
         timeout-minutes: 30
