feat: add gotestfmt to CI to improve test reporting

--- a/taskfiles/test.yml
+++ b/taskfiles/test.yml
@@ -5,29 +5,35 @@ tasks:
     desc: Run unit tests
     aliases:
       - ut
+    deps:
+      - :tools:install-gotestfmt
     vars:
       TIMEOUT: '{{if .CI}}5m{{else}}1m{{end}}'
     cmds:
-      - go test {{.GO_FLAGS}} -timeout {{.TIMEOUT}} -shuffle=on {{if .CI}}{{else}}-v{{end}} ./...
+      - go test {{.GO_FLAGS}} -json -timeout {{.TIMEOUT}} -shuffle=on {{if .CI}}{{else}}-v{{end}} ./... 2>&1 | tee /tmp/gotest.log | {{.TOOLS_BIN_DIR}}/gotestfmt
 
   unit-race:
     desc: Run unit tests with race detection
     aliases:
       - ut-race
+    deps:
+      - :tools:install-gotestfmt
     cmds:
-      - go test {{.GO_FLAGS}} -timeout 3m -shuffle=on -race {{if .CI}}{{else}}-v{{end}} ./...
+      - go test {{.GO_FLAGS}} -json -timeout 3m -shuffle=on -race {{if .CI}}{{else}}-v{{end}} ./... 2>&1 | tee /tmp/gotest.log | {{.TOOLS_BIN_DIR}}/gotestfmt
 
   integration-package:
     desc: Run integration tests for package PKG
     aliases:
       - it
+    deps:
+      - :tools:install-gotestfmt
     requires:
       vars:
         - PKG
     vars:
       TIMEOUT: '{{if .CI}}15m{{else}}5m{{end}}'
     cmds:
-      - go test {{.GO_FLAGS}} -run "^Test.*Integration" -timeout {{.TIMEOUT}} {{if .CI}}{{else}}-v{{end}} {{.PKG}}
+      - go test {{.GO_FLAGS}} -json -run "^Test.*Integration" -timeout {{.TIMEOUT}} {{if .CI}}{{else}}-v{{end}} {{.PKG}} 2>&1 | tee /tmp/gotest.log | {{.TOOLS_BIN_DIR}}/gotestfmt
 
   template:
     desc: Run template tests
