chore: add x_benthos_extras tag to cgo build

--- a/.goreleaser/connect-cgo.yaml
+++ b/.goreleaser/connect-cgo.yaml
@@ -9,6 +9,8 @@ builds:
     binary: redpanda-connect
     goos: [ linux ]
     goarch: [ amd64 ]
+    tags:
+      - x_benthos_extra
     env:
       - CGO_ENABLED=1
     ldflags: >
