--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,9 @@ jobs:
       with:
         go-version: 1.25.5
 
+    - name: Install cgo deps
+      run: sudo apt-get update && sudo apt-get install -y libzmq3-dev
+
     - name: Install Microsoft Go
       if: ${{ matrix.variant == 'connect-fips' }}
       run: |
