--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v6
         with:
-          go-version: stable
+          go-version-file: 'go.mod'
 
       - name: Install Task
         uses: ./.github/actions/setup-task
