--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v6
       with:
-        go-version: 1.25.6
+        go-version-file: 'go.mod'
 
     - name: Install cgo deps
       run: sudo apt-get update && sudo apt-get install -y libzmq3-dev
