--- a/.github/workflows/update-bundles.yml
+++ b/.github/workflows/update-bundles.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v6
       with:
-        go-version: 1.25.5
+        go-version-file: 'go.mod'
 
     - name: Extract version from tag
       id: version
