feat: improve logging

--- a/internal/impl/oracledb/bench/benchmark_config.yaml
+++ b/internal/impl/oracledb/bench/benchmark_config.yaml
@@ -6,13 +6,14 @@ input:
     connection_string: oracle://testdb:testdb123@localhost:1521/XEPDB1
     stream_snapshot: false
     snapshot_max_batch_size: 500
+    logminer_max_batch_size: 500
     stream_backoff_interval: 5s
     include:
       - TESTDB.USERS
       # - testdb.products
       # - testdb.cart
     batching:
-      count: 50
+      count: 5
 
 
 output:
@@ -20,8 +21,11 @@ output:
 #     - benchmark:
 #         interval: 1s
 #         count_bytes: true
-  stdout: {}
+  # stdout: {}
   # drop: {}
+  file:
+    path: "./results.json" # No default (required)
+    codec: lines
 
 logger:
   level: DEBUG
