--- a/internal/impl/oracledb/bench/benchmark_config.yaml
+++ b/internal/impl/oracledb/bench/benchmark_config.yaml
@@ -3,7 +3,7 @@ http:
 
 input:
   oracledb_cdc:
-    connection_string: oracle://testdb:testdb123@localhost:1521/XEPDB1
+    connection_string: oracle://system:YourPassword123@localhost:1521/XE
     stream_snapshot: false
     snapshot_max_batch_size: 500
     logminer:
@@ -22,14 +22,14 @@ output:
 #     - benchmark:
 #         interval: 1s
 #         count_bytes: true
-  # stdout: {}
+  stdout: {}
   # drop: {}
-  file:
-    path: "./results.json" # No default (required)
-    codec: lines
+  # file:
+  #   path: "./results.json" # No default (required)
+  #   codec: lines
 
 logger:
-  level: INFO
+  level: DEBUG
 
 metrics:
   prometheus:
