authz: use User: prefix for authz principals

--- a/internal/mcp/testdata/policies/allow_all.yaml
+++ b/internal/mcp/testdata/policies/allow_all.yaml
@@ -14,5 +14,5 @@ roles:
 
 bindings:
   - role: mcp.admin
-    principal: test@example.com
+    principal: User:test@example.com
     scope: organization/test-org/resourcegroup/default/dataplane/mcp-server
