--- a/internal/mcp/testdata/policies/deny_all.yaml
+++ b/internal/mcp/testdata/policies/deny_all.yaml
@@ -4,5 +4,5 @@ roles:
 
 bindings:
   - role: mcp.readonly
-    principal: test@example.com
+    principal: User:test@example.com
     scope: organization/test-org/resourcegroup/default/dataplane/mcp-server
