--- a/internal/mcp/testdata/policies/selective.yaml
+++ b/internal/mcp/testdata/policies/selective.yaml
@@ -7,5 +7,5 @@ roles:
 
 bindings:
   - role: mcp.user
-    principal: test@example.com
+    principal: User:test@example.com
     scope: organization/test-org/resourcegroup/default/dataplane/mcp-server
