--- a/internal/gateway/testdata/policies/allow_all.yaml
+++ b/internal/gateway/testdata/policies/allow_all.yaml
@@ -6,5 +6,5 @@ roles:
 
 bindings:
   - role: test.admin
-    principal: test@example.com
-    scope: organization/test-org/resourcegroup/default/dataplane/test-service
+    principal: User:test@example.com
+    scope: organizations/test-org/resourcegroups/default/dataplanes/test-service
