--- a/resources/docker/redpanda_benchmarking/generate.yaml
+++ b/resources/docker/redpanda_benchmarking/generate.yaml
@@ -13,14 +13,14 @@ input:
       root.Gooeyness = (random_int() % 100) / 100
 
 output:
-  redpanda_common:
+  redpanda:
     topic: testing_a
     # max_in_flight: 1 # Ensures ordering from the generate input
 
 redpanda:
-    seed_brokers: [ localhost:9092 ]
-    logs_topic: generate.logs
-    status_topic: generate.status
+  seed_brokers: [ localhost:9092 ]
+  logs_topic: generate.logs
+  status_topic: generate.status
 
 metrics:
   prometheus: {}
