goreleaser: use Docker buildx with docker-container driver
Without this patch we get the warning:

docker buildx is using the docker driver, which isn't tested and may cause issues. Consider switching to the docker-container driver.

Learn more at https://docs.docker.com/go/attestations/driver=docker

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,8 +100,14 @@ jobs:
           username: ${{ env.DOCKERHUB_USER }}
           password: ${{ env.DOCKERHUB_TOKEN }}
 
-      - name: Install Buildx
+      - name: Setup Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Setup Task
+        uses: ./.github/actions/setup-task
+
+      - name: Initialize Docker buildx with docker-container driver
+        run: task docker:init
 
       - name: Write telemetry private key
         env:
